manifests/wireguard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      containers:
        - name: wireguard
          image: linuxserver/wireguard:latest
          ports:
            - containerPort: 51820
              protocol: UDP
