manifests/wireguard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wireguard
spec:
  selector:
    app: wireguard
  ports:
    - port: 51820
      protocol: UDP
      targetPort: 51820
  type: LoadBalancer
