manifests/wireguard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wireguard
spec:
  rules:
    - host: wireguard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wireguard
                port:
                  number: 51820
